export enum Estado {
    PENDIENTE = 'Pendiente',
    COMPLETADA = 'Completada'
}
