export enum Prioridad {
    ALTA = 1,
    MEDIA = 2,
    BAJA = 3,
}
