@startuml ToDo

class App {
	-instance: App
	-tareaArchivo: TareaArchivo
	-estadisticas: Estadisticas
	-estrategiaOrden: Ordenador

	+getInstance(): App
	+ordenar(): void
}

class Tarea {
	-id: number
	-titulo: String
	-descripcion: String
	-fechaCreacion: Date
	-fechaVencimiento: Date
	-fechaCreacion: Date
	-prioridad: Prioridad
	-categoria: Categoria;
	-etiquetas: List<String>
	-avance: number
	-estado: Estado

	+actualizarAvance(nuevoAvance: number): void
	+marcarComoCompletada(): void
}

enum Prioridad {
	ALTA
	MEDIA
	BAJA
}

enum Estado {
	PENDIENTE
	COMPLETADA
}

class Categoria{
	-id:number;
	-nombre:string;
}
class Estadisticas {
	+calcularTareasCompletadas(listaTareas): number
	+calcularTareasPendientes(listaTareas): number
	+calcularTasaFinalizacion(listaTareas): number
	+tiempoDedicadoPorTarea(listaTareas): Map<id, diasDedicado>
}

class TareaArchivo {
	+guardarTareas(tareas: List<Tarea>): void
	+cargarTareas(): List<Tarea>
}

'uso
App --> Estadisticas
App --> TareaArchivo
TareaArchivo --> Tarea

class TareaArchivo {
	+guardarTarea(tarea: Tarea): void
	+cargarTareas(): List<Tarea>
	+cargarTarea(id: number): Tarea
	+eliminarTarea(id: number): void
}

interface Ordenador {
	+ordenar(): void
}

class OrdenPrioridad {}

class OrdenTitulo{}

class OrdenVencimiento{}

'composition
App *-- App
Tarea *-- Categoria
App *-- Ordenador

'herencia
Ordenador <|.. OrdenPrioridad
Ordenador <|.. OrdenTitulo
Ordenador <|.. OrdenVencimiento

@enduml
